<resources>
    <string name="app_name">SIONYX</string>
    <string name="nearby_devices">NEARBY DEVICES</string>
    <string name="camera_name">Camera Name</string>
    <string name="permission_message_first">SIONYX App requires your permission to locate nearby Wi-Fi and bluetooth devices to establish and maintain a connection with your camera.The SIONYX app does not derive any physical location information.</string>
    <string name="permission_message_second"> If you choose to not grant permission at this time, you may do so in the future by accessing the mobile device\'s settings menu and enabling the permission in the app permissions setting page for the SIONYX mobile app.</string>
    <string name="enable_bluetooth_wifi_dialog_message">THE SIONYX MOBILE APP REQUIRES BLUETOOTH AND Wi-Fi FOR PROPER FUNCTION. PLEASE CHANGE IN DEVICE SETTINGS TO CONTINUE.</string>
    <string name="wifi_disconnected_messgae">The Wi-Fi connection is lost.\nDo you wish to try to reconnect?</string>
    <string name="socket_disconnected_messgae">Camera connection failed.\nPlease power cycle the camera and reconnect to the mobile app.</string>
    <string name="wifi_connected_with_other_client">Camera is connected to another client.\nPlease disconnect the other client and try to reconnect.</string>
    <string name="wifi_connection_lost">The Wi-Fi Connection is Lost.</string>
    <string name="long_press_camera_manage">Press and hold the camera icon to \nmanage the camera settings.</string>
    <string name="bluetooth_not_supported">Device does not support Bluetooth.</string>
    <string name="sionyx_com_patents">sionyx.com/patents</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_value">SIONYX LLC 2026</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="app_version">App Version</string>
    <string name="app_version_number">1.1.0</string>
    <string name="contact">CONTACT</string>
    <string name="support_sionyx_com">support@sionyx.com</string>
    <string name="contact_no">+1 (866) 827–8237</string>
    <string name="patent_info">Patent info</string>
    <string name="share">Share</string>
    <string name="is_golden">golden</string>
    <string name="is_normal">normal</string>
    <string name="fw_please_wait">Please wait…</string>
    <string name="unknown_ssid"><![CDATA[<unknown ssid>]]></string>
    <string name="download_successful">The download has completed.</string>
    <string name="download_in_progress">File download in progress…</string>
    <string name="device_info">DEVICE INFO</string>
    <string name="ssid">ssid</string>
    <string name="name">name</string>
    <string name="mac_address">mac address</string>
    <string name="fw_update_available">Firmware Update Available</string>
    <string name="fw_up_to_date">Firmware is Up to date</string>
    <string name="check_for_update">Check for Updates</string>
    <string name="change_name_password">Change Name</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="back_to_settings">Back to Settings</string>
    <string name="change_device_name_password">Change Device Name</string>
    <string name="device_name">Device Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="isp">ISP</string>
    <string name="save">Save</string>
    <string name="manage">Manage</string>
    <string name="date">DATE:</string>
    <string name="duration">DURATION:</string>
    <string name="location">LOCATION:</string>
    <string name="time">TIME:</string>
    <string name="latitude">LATITUDE:</string>
    <string name="longitude">LONGITUDE:</string>
    <string name="recording_info">Recording Info</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="all">ALL</string>
    <string name="photos">PHOTOS</string>
    <string name="videos">VIDEOS</string>
    <string name="select_all">Select All</string>
    <string name="download">Download</string>
    <string name="erase">Erase</string>
    <string name="model">model:</string>
    <string name="resolution">resolution:</string>
    <string name="software">software:</string>
    <string name="aperture">aperture:</string>
    <string name="focal_length">focal length:</string>
    <string name="date_time">data time:</string>
    <string name="device_name_cannot_blank">Device Name cannot be blank</string>
    <string name="back_to_device_info">Back to Device Info</string>
    <string name="reset_my_device">Reset My Device</string>
    <string name="unselect_all">Deselect All</string>
    <string name="unknown">UNKNOWN</string>
    <string name="up_loading">Uploading…</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="select_device">SELECT DEVICE</string>
    <string name="lat_lon">Lat: %1$s\nLon: %2$s</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="recording_info_title">Recording Info</string>
    <string name="delete_recording_text">Delete Recording</string>
    <string name="image_info">Image Info</string>
    <string name="delete_image_text">Delete Image</string>
    <string name="intial_percentage">0%</string>
    <string name="fps">\FPS: \</string>
    <string name="factory_reset_message">Are you sure you want to factory reset your SIONYX Camera?</string>
    <string name="pop_up_delete_message">This action will delete this camera and any associated connection setting.\nLocally stored media will not be deleted.</string>
    <string name="camera_name_length">Camera Name must be between 8 to 32 characters.</string>
    <string name="noudp">Please turn off the camera then turn on again to receive Live View.</string>
    <string name="camera_name_error">This character is not supported.</string>
    <string name="un_supported_character_message">Camera name contains unsupported special characters.\nUpdate the camera name in order to proceed further.</string>
    <string name="photo_capture">An image has been captured.</string>
    <string name="enable_live">Start live stream to enable.</string>
    <string name="delete_videos">The video has been deleted.</string>
    <string name="video_saved">The video has been saved.</string>
    <string name="erased">The media file has been deleted.</string>
    <string name="multiple_erased">The media files has been deleted.</string>
    <string name="not_erased">Choose the media file you want to delete.</string>
    <string name="location_not_found">Location not found</string>
    <string name="record_not_found">No Records Found</string>
    <string name="unable_scan">Unable to connect with the camera.\nPlease try again.</string>
    <string name="wifi_scan_warning">Check camera availability in system settings: Go to your device\'s settings page and look for the camera settings. Make sure the camera is available.</string>
    <string name="ble_discover_warning">Make sure the camera is Turned ON.</string>
    <string name="download_unsuccessful">Choose the media file you want to download.</string>
    <string name="delete_image">The image has been deleted.</string>
    <string name="confirm_erase">Are you sure want to delete the media file?</string>
    <string name="multiple_confirm_erase">Are you sure want to delete the media files?</string>
    <string name="recording_stopped_no_live_data">Camera recording stopped due to no video data.</string>
    <string name="video_storage">Insufficient storage is available.\nMore space is required to record the video.</string>
    <string name="image_storage">Insufficient storage is available.\nMore space is required to capture the image.</string>
    <string name="no_memory_to_download">Insufficient storage is available.More space is required to download the media files.</string>
    <string name="change_network_state_failed">CHANGE_NETWORK_STATE FAILED</string>
    <string name="camera_update_failed">Camera name update failed please try again.</string>
    <string name="corrupted_video">Unable to select a corrupted video.</string>
    <string name="load_settings">Load Settings</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="no_records_found">No Records Found</string>
    <string name="preset_name">Enter the preset name</string>
    <string name="save_settings_delete_message">This action will remove the settings and cannot be undone. Are you sure you want to proceed?</string>
    <string name="already_exists">Preset name already exists.</string>
    <string name="preset_name_length">Please ensure that the name is between 3 to 32 characters.</string>
    <string name="give_the_saved_settings_name_msg">Specify a name for saving your settings within the app.</string>
    <string name="settings_loaded_successfully">Settings loaded successfully</string>
    <string name="settings_loaded_failed">Failed</string>
    <string name="settings_saved_successfully">Settings saved successfully</string>
    <string name="settings_saved_failed">Failed.</string>
    <string name="usb">USB</string>
    <string name="wifi">Wi-Fi</string>
    <string name="firmware_type">Firmware</string>
    <string name="current_version">Current</string>
    <string name="new_version">New</string>
    <string name="top_version">Top Version</string>
    <string name="set_mirror_image">Set Mirror Image</string>
    <string name="set_flip_image">Set Flip Image</string>
    <string name="rtp_are_different_than_1044_without_n_being_the_last_segment_of_a_njpeg_0xffd9">RTP Size Err. :</string>
    <string name="rtp_skipped_packet">Skipped :</string>
    <string name="receive_udp_packets">Received :</string>
    <string name="proceed_with_update_nightwave">Proceed with update?</string>
    <string name="component_type">Component</string>
    <string name="auto">AUTO</string>
    <string name="frames">Frames: </string>
    <string name="size">Size: </string>
    <string name="received">Received: </string>
    <string name="skipped">Skipped: </string>
    <string name="bad_start">Bad Start:</string>
    <string name="bad_end">Bad End: </string>
    <string name="bad_offset">Bad Offset: </string>
    <string name="camera_menu">Camera Menu</string>
    <string name="video_mode_please_wait">Please wait…</string>
    <string name="enable_live_streaming_message">Change video mode from USB to Wi-Fi to stream live video.</string>
    <string name="wifi_mode_changes_message">Video mode changed: camera needs to restart.</string>
    <string name="video_is_playing_over_usb_nchange_video_mode_from_usb_to_wifi_in_settings_to_turn_on_wifi_streaming">Video is playing over USB.\nUse settings menu to change video mode from USB to Wi-Fi streaming.</string>
    <string name="nightwave_factory_reset_message">Are you sure you want\nto factory reset your SIONYX\nMarine Camera?</string>
    <string name="display_user_recover_mode">Software Update did not complete properly.\nRecover Nightwave?</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="show_password">Show Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register Here</string>
    <string name="pwd_error_msg1">Password must be between 8 and 64 characters</string>
    <string name="pwd_error_msg2">Password must include at least one special character.</string>
    <string name="pwd_error_msg3">Password must include at least one uppercase letter.</string>
    <string name="pwd_error_msg4">Password must include at least one lowercase letter.</string>
    <string name="pwd_error_msg5">Password must include at least one number.</string>
</resources>